# Carom

./: .gitignore  README.md
Carom/: CMakeLists.txt  instalador.nsi
Carom/.cache/clangd/index/: aabb.c.9809471BD153624F.idx  aabb.h.8158B3024591A136.idx  arena_allocator.c.6253954AFA4CC24C.idx  arena_allocator.h.D623381926AE24C4.idx  array.c.A446D73974BBB964.idx  array.h.444E52C9483734DB.idx  atomic.h.03C85586EA539F16.idx  base.h.203E1B838D0238D4.idx  bitset.c.7A298E53D7FD785C.idx  bitset.h.ADD41022FE38C561.idx  body.c.D1B009D2FE15043F.idx  body.h.3AF2D2B8F2935742.idx  box2d.h.3D757C0C9DEC8CD8.idx  broad_phase.c.381E441577BF692A.idx  broad_phase.h.0E36BDDD2B527C6F.idx  collision.h.553BDBA3FA6D2B8F.idx  constants.h.757AEF821E9128C3.idx  constraint_graph.c.5B9E561818914027.idx  constraint_graph.h.B94E64F51DBE1C5C.idx  contact.c.E321DC2D9EEEBAFB.idx  contact.h.A777576850D8F1AE.idx  contact_solver.c.9781DA89E0E2773B.idx  contact_solver.h.D5953CCFBB961E2D.idx  core.c.AD38C153F2FC00CC.idx  core.h.11C16C16DA684E17.idx  ctz.h.FEF6F3AEF645CEAB.idx  distance.c.705293DB015E179E.idx  distance_joint.c.2DDEC1C58EFFF2CE.idx  dynamic_tree.c.CA84CC98131AA255.idx  geometry.c.14B6F7C847D3D55D.idx  hull.c.87419A07609663DE.idx  id.h.61EBFB7B47C6BC97.idx  id_pool.c.0868897AB39A5C18.idx  id_pool.h.BA1DA4DC0E1C13E0.idx  island.c.37ABD434A03B8D22.idx  island.h.076A08B83900DB2C.idx  joint.c.CACBE1225081DA06.idx  joint.h.648273D9869DEE6B.idx  manifold.c.19883968EB772661.idx  math_functions.c.420E409A00189915.idx  (+22 more)
Carom/CAMBIAR EN CASA POR FAVOR (ADEMÁS SHOWCURSOR)/: CaromScene.cpp  CaromScene.h  aasa.txt
Carom/resources/config/: resources.json  sdlutilsdemo.resources.json  test.resources.json
Carom/resources/content/: positions.json
Carom/resources/prefabs/: basicBallPrefab.json  examplePrefab.json
Carom/resources/prefabs/inventoryData/: inventory.json  (+5 more)
Carom/resources/videofinal/: donut.mkv  wand.mkv
Carom/src/: Component.h  DeltaTimeTest.cpp  DummyGame.cpp  DummyGame.h  Entity.cpp  Entity.h  Game.cpp  Game.h  HandleEventComponent.h  PhysicsComponent.h  RenderComponent.h  ScoreContainer.cpp  ScoreContainer.h  boxTest.cpp  inputTest.cpp  inputTest.h  main.cpp  testBox2D.cpp
Carom/src/Animator/: Animation.h  AnimatorComponent.cpp  AnimatorComponent.h  BallRollerAnimatorComponent.cpp  BallRollerAnimatorComponent.h  Frame.cpp  Frame.h  FrameAnimatorComponent.cpp  FrameAnimatorComponent.h  RenderSpritesheetComponent.cpp  RenderSpritesheetComponent.h  RoundScoreAnimComponent.cpp  RoundScoreAnimComponent.h
Carom/src/Audio/: AudioManager.cpp  AudioManager.h
Carom/src/Ball/: AbacusEffect.cpp  AbacusEffect.h  BallEffect.cpp  BallEffect.h  BallHandler.cpp  BallHandler.h  BowlingEffect.cpp  BowlingEffect.h  CristalEffect.cpp  CristalEffect.h  ExplosiveEffect.cpp  ExplosiveEffect.h  ExplosiveEffect.h.cpp  FrictionMultiplierEffect.cpp  FrictionMultiplierEffect.h  PetanqueEffect.cpp  PetanqueEffect.h  PokeballEffect.cpp  PokeballEffect.h  PopToOppositeSideEffect.cpp  PopToOppositeSideEffect.h  PushOutsideTriggerComponent.cpp  PushOutsideTriggerComponent.h  QuanticEffect.cpp  QuanticEffect.h  SubdivisionEffect.cpp  SubdivisionEffect.h  X2Effect.cpp  X2Effect.h
Carom/src/EC/: ecs.h  ecs_defs.h
Carom/src/ECS/: BallInfoDisplayComponent.cpp  BallInfoDisplayComponent.h  BoxRBComponent.cpp  BoxRBComponent.h  BoxingGloveStickEffect.cpp  BoxingGloveStickEffect.h  Button.cpp  Button.h  CameraComponent.cpp  CameraComponent.h  CapsuleRBComponent.cpp  CapsuleRBComponent.h  CircleRBComponent.cpp  CircleRBComponent.h  CircleRigidBodyComponent.cpp  CircleRigidBodyComponent.h  ColorBallScorerComponent.cpp  ColorBallScorerComponent.h  Component.cpp  Component.h  DialogueTextComponent.cpp  DialogueTextComponent.h  DonutStickEffect.cpp  DonutStickEffect.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EventOnCollision.cpp  EventOnCollision.h  FollowComponent.cpp  FollowComponent.h  GameList.h  GameScene.cpp  GameScene.h  GranadeLauncherStickEffect.cpp  GranadeLauncherStickEffect.h  HandleEventComponent.h  ITransform.h  InfoComponent.h  (+50 more)
Carom/src/Feedback/: RenderArrayComponent.cpp  RenderArrayComponent.h
Carom/src/Graphics/: GraphicsUtils.cpp  GraphicsUtils.h
Carom/src/HitManager/: ColorHitManager.cpp  ColorHitManager.h  HitManager.cpp  HitManager.h
Carom/src/Inventory/: Inventory.h  InventoryManager.cpp  InventoryManager.h
Carom/src/JSON/: JsonEntityParser.cpp
Carom/src/Physics/: B2Manager.cpp  B2Manager.h  PhysicsUtils.cpp  PhysicsUtils.h
Carom/src/Progression/: ProgressionManager.cpp  ProgressionManager.h
Carom/src/RNG/: RNG_Manager.h  RandomItem.h  RandomItemParser.h
Carom/src/Rewards/: BossReward.h  DefaultReward.h  Reward.h
Carom/src/SceneSystem/: Camera.cpp  Camera.h  GameScene.cpp  GameScene.h  ScenesManager.cpp  ScenesManager.h
Carom/src/Scenes/: CaromScene.cpp  CaromScene.h  EndGameScene.cpp  EndGameScene.h  HelperScene.cpp  HelperScene.h  ItemIDs.h  MainScene.cpp  MainScene.h  PauseScene.cpp  PauseScene.h  PoolScene.cpp  PoolScene.h  PrefabTestScene.cpp  PrefabTestScene.h  RewardScene.cpp  RewardScene.h  TextHelperScene.cpp  TextHelperScene.h  TutorialScene.cpp  TutorialScene.h  UIScene.cpp  UIScene.h
Carom/src/StateMachine/: AddScoreState.cpp  AddScoreState.h  BossState.cpp  BossState.h  EndMatchState.cpp  EndMatchState.h  HitState.cpp  HitState.h  LoseMatchState.cpp  LoseMatchState.h  NullState.h  PL_State.h  PostScoringState.cpp  PostScoringState.h  ScoringState.cpp  ScoringState.h  StartMatchState.cpp  StartMatchState.h  State.cpp  State.h  TutorialOneHitState.cpp  TutorialOneHitState.h  TutorialOneScoringState.cpp  TutorialOneScoringState.h  TutorialOneStartMatchState.cpp  TutorialOneStartMatchState.h  TutorialTwoHitState.cpp  TutorialTwoHitState.h  TutorialTwoScoringState.cpp  TutorialTwoScoringState.h  TutorialTwoStartMatchState.cpp  TutorialTwoStartMatchState.h  WinMatchState.cpp  WinMatchState.h
Carom/src/Text/: Text.h
Carom/src/Tweening/: Tweening.cpp  Tweening.h
Carom/src/Tweens/: Tween.h  TweenManager.cpp  TweenManager.h
Carom/src/game/: Game.cpp  Game.h
(+181 files in other folders)
